Adicionado base de experiencias

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <link href="styles/intro.css" rel="stylesheet"/>
     <link href="styles/about.css" rel="stylesheet"/>
     <link href="styles/fractal.css" rel="stylesheet"/>
+    <link href="styles/experience.css" rel="stylesheet"/>
 
     <link rel="icon" href="Imagens/favicon.ico"/>
 
@@ -56,11 +57,43 @@
           <li>JavaScript</li>
           <li>Python</li>
           <li>C#</li>
-        </ul>
+        </ul> 
       </div>
       <img class="img-me" src="Imagens/Eu.jpeg" alt="Gabs">
     </div>
 
-    <script src="scripts/fractal.js"></script>
+
+
+    <div class="experiences">
+      Experience
+      <div class="tab">
+        <button class="tablinks" onclick="openjob(event, 'job1')">Java Developer</button>
+
+        <button class="tablinks" onclick="openjob(event, 'job2')">Supply planning assistant</button>
+
+        <button class="tablinks" onclick="openjob(event, 'job3')">Supply planning intern</button>
+
+      </div>
+      <div class="job1">
+        <div class="date-job">1/1/1</div>
+        <div class="company-job">construtora patriani</div>
+        <div class="desc-job">Desenvolvimento</div>
+      </div>
+      
+      <div class="job2">
+        <div class="date-job">1/1/1</div>
+        <div class="company-job">construtora patriani</div>
+        <div class="desc-job">Desenvolvimento</div>
+      </div>
+
+      <div class="job3">
+        <div class="date-job">1/1/1</div>
+        <div class="company-job">construtora patriani</div>
+        <div class="desc-job">Desenvolvimento</div>
+      </div>
+
+    </div>
+
+    <script src="scripts/script.js"></script>
   </body>
 </html>
